--- a/Microservice.Core.Packages.Security/Microservice.Core.Packages.Security.csproj
+++ b/Microservice.Core.Packages.Security/Microservice.Core.Packages.Security.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Microservice.Core.Packages.Persistence\Microservice.Core.Packages.Persistence.csproj" />
+  </ItemGroup>
+
 </Project>
