--- a/Microservice.Core.Packages.Security/Microservice.Core.Packages.Security.csproj
+++ b/Microservice.Core.Packages.Security/Microservice.Core.Packages.Security.csproj
@@ -1,10 +1,14 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Microservice.Core.Packages.Persistence\Microservice.Core.Packages.Persistence.csproj" />
