--- a/Microservice.Core.Packages.Security/Microservice.Core.Packages.Security.csproj
+++ b/Microservice.Core.Packages.Security/Microservice.Core.Packages.Security.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
+    <PackageReference Include="Otp.NET" Version="1.3.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
   </ItemGroup>
 
